[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphahuman-langgraph"
version = "0.1.0"
description = "LangGraph integration for Alphahuman Memory API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "alphahuman-memory>=0.1.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
